--- a/mini-projects/tooltip/style.css
+++ b/mini-projects/tooltip/style.css
@@ -14,7 +14,7 @@ p {
     font-size: 3em;
     margin: 60px;
 }
-[data-tooltip] {
+[data-tooltip]:not(.tooltip-js) {
     position: relative;
 }
 
@@ -28,7 +28,16 @@ p {
     padding: 10px;
     text-align: center;
     color: cornsilk;
-    background-color: cadetblue;
+    background-color: hsl(182, 25%, 50%, 0.8);
     border-radius: 10px;
     border: 3px dotted whitesmoke;
+}
+
+.div-tooltip {
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color:hsl(182, 25%, 50%, 0.8);
+    color: cornsilk;
 }
