--- a/mini-projects/tooltip/style.css
+++ b/mini-projects/tooltip/style.css
@@ -36,8 +36,14 @@ p {
 .div-tooltip {
     opacity: 0;
     position: fixed;
-    top: 0;
+    width: 200px;
+    top: -140%;
     left: 0;
-    background-color:hsl(182, 25%, 50%, 0.8);
+    right: 0;
+    padding: 10px;
+    text-align: center;
     color: cornsilk;
+    background-color: hsl(182, 25%, 50%, 0.8);
+    border-radius: 10px;
+    border: 3px dotted whitesmoke;
 }
