--- a/mini-projects/tooltip/style.css
+++ b/mini-projects/tooltip/style.css
@@ -37,7 +37,7 @@ p {
     opacity: 0;
     position: fixed;
     width: 200px;
-    top: -140%;
+    top: 110%;
     left: 0;
     right: 0;
     padding: 10px;
@@ -46,4 +46,9 @@ p {
     background-color: hsl(182, 25%, 50%, 0.8);
     border-radius: 10px;
     border: 3px dotted whitesmoke;
+}
+
+.items {
+    width: 150px;
+    height: 30px;
 }
